--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,3 +15,4 @@ quick-xml = { version = "0.28.2", features = ["serde", "serde-types", "serialize
 serde = { version = "1.0.160", features = ["derive"] }
 serde_json = "1.0.96"
 rusqlite = { version = "0.29.0", features = ["bundled"] }
+clap = { version = "4.2.5", features = ["derive"] }
